目录搭建完成

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-charts",
+  "name": "vue-charts-block",
   "description": "vue版echarts组件",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
   "main": "src/lib/index.js",
@@ -19,7 +19,7 @@
     "Vue",
     "Echarts"
   ],
-  "homepage": "https://github.com/QuietHear/ele-nav",
+  "homepage": "https://github.com/QuietHear/charts",
   "dependencies": {
     "vue": "^2.5.11"
   },
