--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-charts-block",
   "description": "vue版echarts组件",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
   "main": "src/lib/index.js",
@@ -21,17 +21,24 @@
   ],
   "homepage": "https://github.com/QuietHear/charts",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "vue": "^2.5.11"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.6.0n",
+    "babel-preset-stage-2": "^6.22.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "vue-loader": "^13.0.5",
+    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
