--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-charts-block",
   "description": "vue版echarts组件",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
   "main": "src/lib/index.js",
@@ -19,7 +19,7 @@
     "Vue",
     "Echarts"
   ],
-  "homepage": "https://github.com/QuietHear/charts",
+  "homepage": "https://github.com/QuietHear/vue-charts-block",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "vue": "^2.5.11"
