--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-charts-block",
   "description": "vue版echarts组件",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
   "main": "src/lib/index.js",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/QuietHear/vue-charts-block",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "echarts": "^4.2.0-rc.2",
     "vue": "^2.5.11"
   },
   "devDependencies": {
