--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
   "name": "vue-charts-block",
   "description": "vue版echarts组件",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
-  "main": "src/lib/index.js",
+  "main": "dist/vue-charts-block.min.js",
   "private": false,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "keywords": [
     "Vue",
     "Echarts"
   ],
   "homepage": "https://github.com/QuietHear/vue-charts-block",
-  "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "echarts": "^4.2.0-rc.2",
-    "vue": "^2.5.11"
-  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -32,16 +22,20 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.6.0n",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "uglifyjs-webpack-plugin": "^1.1.1",
+    "vue": "^2.5.11",
     "vue-loader": "^13.0.5",
+    "vue-router": "^3.0.6",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.11.3"
+    "webpack-dev-server": "^2.9.1",
+    "echarts": "^4.2.0-rc.2"
   }
 }
