--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
     "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^4.1.1",
     "vue": "^2.5.11",
     "vue-loader": "^13.0.5",
     "vue-router": "^3.0.6",
