--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "vue-charts-block",
-  "description": "vue版echarts组件",
-  "version": "3.1.0",
+  "name": "vue-echarts-block",
+  "description": "vue2版echarts组件",
+  "version": "0.0.1",
   "author": "aFei <1106728884@qq.com>",
   "license": "MIT",
-  "main": "dist/vue-charts-block.min.js",
+  "main": "dist/vue-echarts-block.min.js",
   "private": false,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "keywords": [
-    "Vue",
-    "Echarts"
+    "Vue2",
+    "Echarts4"
   ],
-  "homepage": "https://github.com/QuietHear/vue-charts-block",
+  "homepage": "https://github.com/QuietHear",
+  "repository": "https://github.com/QuietHear/vue-echarts-block",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
